--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
            </h5>
 
            <h3>List of Köenigsegg production cars</h3>
-           <h5>
-            - CC prototype, first ever car manufactured by Köenigsegg.<br>
-            - CC8S, second car produced by koenigsegg and first to be homologated for sale.<br>
-            - CCR, had an updated front end design compared to the CC8S aswell as better suspension, more power and a larger rear wing.<br>
-            - CCGT, only one ever made and only Köenigsegg to be homologated for a racing series, however the regulations changed prior to Köenigsegg being able to participate.<br>
-            - CCX, first Köenigsegg to be sold in the United States.<br>
-            - CCXR, CCX with more power and better handling.<br>
-            - Agera, first turbocharged Köenigsegg.<br>
-            - Agera r, enhanced performance over the Agera.<br>
-            - Agera s, was an agera optimised for performance fuels instead of regular 91.<br>
-            - Agera rs, lighter weight and higher power combined with better cornering made it a faster car in turns and in straight lines.<br>
-            - One:1, had a 1:1 power to weight ratio with 1360ps of power and 1360kg of weight<br>
-            - Regera, first Köenigsegg with a hybrid drivetrain and first to stray from original design.<br>
-            - Jesko attack, higher downforce allowing for better corner.<br>
-            - Jesko absolut, fastest Köenigsegg ever built, has a shark fin no other köenigsegg has.<br>
-            - Gemera, first ever 4 seater Köenigsegg.<br>
-            - CC850, return to the classic design philosophy with a manual transmission.
-           </h5>
+           <ul> 
+             <li> CC prototype, first ever car manufactured by Köenigsegg. </li>
+             <li> CC8S, second car produced by koenigsegg and first to be homologated for sale. </li>
+             <li> CCR, had an updated front end design compared to the CC8S aswell as better suspension, more power and a larger rear wing. </li>
+             <li> CCGT, only one ever made and only Köenigsegg to be homologated for a racing series, however the regulations changed prior to Köenigsegg being able to participate. </li>
+             <li> CCX, first Köenigsegg to be sold in the United States. </li>
+             <li> CCXR, CCX with more power and better handling. </li>
+             <li> Agera, first turbocharged Köenigsegg. </li>
+             <li> Agera r, enhanced performance over the Agera. </li>
+             <li> Agera s, was an agera optimised for performance fuels instead of regular 91. </li>
+             <li> Agera rs, lighter weight and higher power combined with better cornering made it a faster car in turns and in straight lines. </li>
+             <li> One:1, had a 1:1 power to weight ratio with 1360ps of power and 1360kg of weight </li>
+             <li> Regera, first Köenigsegg with a hybrid drivetrain and first to stray from original design. </li>
+             <li> Jesko attack, higher downforce allowing for better corner. </li>
+             <li> Jesko absolut, fastest Köenigsegg ever built, has a shark fin no other köenigsegg has. </li>
+             <li> Gemera, first ever 4 seater Köenigsegg. </li>
+             <li> CC850, return to the classic design philosophy with a manual transmission. </li>
+           </ul>
 
            <h4> Extra information: </h4>
            <p> 
@@ -94,4 +94,5 @@
         </div> <!--/ footer -->
         </div>
   </body>
+
 </html>
