--- a/records.html
+++ b/records.html
@@ -28,45 +28,24 @@
 
         <div class="box main">
           <h2> List of Köenigsegg records </h2>
-
-          <h3> 2004 - Most powerful production car </h3>
-          <h5> The Köenigsegg CCR broke the record by 150hp with a output of 806hp. </h5>
-
-          <h3> Worlds fastest car </h3>
-          <h5> The Köenigsegg CCR broke this record beating the mclaren F1's previous record of 386.4 KMPH by
-            1.5KMPH.
-          </h5>
-
-          <h3> Top Gear test track record </h3>
-          <h5> highest speed recorded on the top gear test track of the time at 196mph. </h5>
-          
-          <h3> fastest 0-300-0 KM/H </h3>
-          <h5> The Köenigsegg CCX accelerated from 0 to 300 KM/H and back to 0 KM/H in 29.2 seconds. </h5>
-
-          <h3> Agera R 0-300-0 record</h3>
-          <h5> The Agera R took Köenigseggs record by completing a 0-300-0 run in 21.19 seconds. </h5>
-
-          <h3> One:1 0-300-0 </h3>
-          <h5> Once again Köenigsegg broke their own record by completing a run in 17.95 seconds. </h5>
-
-          <h3> Highest top speed, Agera RS </h3>
-          <h5> The Agera RS reached a top speed of 447.19 KM/H, on the same day they also broke the 0-400-0 record
-            taking only 33.29 seconds.
-          </h5>
-
-          <h3> 0-400-0 record, Regera </h3>
-          <h5> Köenigsegg broke their own record once again by completing a 0-400-0 KM/H run in 31.49 seconds. </h5>
-
-          <h3> 0-400-0 record, Regera </h3>
-          <h5> The Köenigsegg Regera took back its own title with a 0-400-0 KM/H run of 28.81 seconds. </h5>
+<ul> 
+  <li> Most powerful production car, The Köenigsegg CCR broke the record by 150hp with a output of 806hp. </li>
+  <li> Worlds fastest car, The Köenigsegg CCR broke this record beating the mclaren F1's previous record of 386.4 KMPH by
+    1.5KMPH. </li>
+  <li> Top Gear test track record, highest speed recorded on the top gear test track of the time at 196mph. </li>
+  <li> fastest 0-300-0 KM/H, The Köenigsegg CCX accelerated from 0 to 300 KM/H and back to 0 KM/H in 29.2 seconds. </li>
+  <li> Agera R 0-300-0 record, The Agera R took Köenigseggs record by completing a 0-300-0 run in 21.19 seconds. </li>
+  <li> One:1 0-300-0 Once again Köenigsegg broke their own record by completing a run in 17.95 seconds. </li>
+  <li> Agera RS Highest top speed, The Agera RS reached a top speed of 447.19 KM/H, on the same day they also broke the 0-400-0 record
+    taking only 33.29 seconds. </li>
+  <li> Regera 0-400-0 record, Köenigsegg broke their own record once again by completing a 0-400-0 KM/H run in 31.49 seconds. </li>
+  <li> Regera 0-400-0 record, The Köenigsegg Regera took back its own title with a 0-400-0 KM/H run of 28.81 seconds. </li>
+</ul>       
         </div> <!--/ main -->
 
         <div class="box side">
           <h4> Köenigsegg CCR </h4>
           <img src="Koenigsegg_CCR,_GIMS_2019,_Le_Grand-Saconnex_(GIMS0035).jpg" alt="Orange Köenigsegg CCR on display">
-
-          <h4> Köenigsegg Agera Rs </h4>
-          <img src="2015_Koenigsegg_Agera_N_(19886243212).jpg" alt="White Köenigsegg Agera RS on track">
         </div> <!--/ side -->
 
         <div class="box footer">
