--- a/CCGT.html
+++ b/CCGT.html
@@ -30,20 +30,20 @@
           <h2> Köenigsegg CCGT </h2>
 
           <h3> History </h3>
-          <h5> The Köenigsegg CCGT was a side project for the engineers at Köenigsegg, during the development
+          <p> The Köenigsegg CCGT was a side project for the engineers at Köenigsegg, during the development
             of the first ever production Köenigsegg (the CC) Christian Von Köenigsegg had a large amount of interest
             in the ACO Le Mans regulations and the GT1 class. The Köenigsegg CCGT never got to race however as two 
             months after the CCGT enterered testing the FIA changed the regulations for the GT1 class, this disallowed carbon
             monocoques and minimum production numbers went from 20 cars to 350 cars. This was far out of reach for Köenigsegg
             especially during its early years.
-          </h5>
+          </p>
 
           <h3> Performance </h3>
-          <h5> The Köenigsegg CCGT did not have much horsepower for Köenigsegg. However this was not where it shined
+          <p> The Köenigsegg CCGT did not have much horsepower for Köenigsegg. However this was not where it shined
             although the car only had 600 BHP it was extremely light, weighing less than 1000kg and had suspension setups
             tuned to perfectiong allowing for it to handle incredibly well. Infact no Köenigsegg car had handling to the same 
             level as the CCGT up until 2025 when the Sadairs Spear was released.
-          </h5>
+          </p>
         </div> <!--/ main -->
 
         <div class="box side">
@@ -57,4 +57,5 @@
       
         </div>
   </body>
+
 </html>
