--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           <h2> Welcome to Köenigsegg, a brief history! </h2>
 
           <h3> What is Köenigsegg, a brief history about? </h3>
-          <h5> Köenigsegg, a brief history is a 4 page website that covers the company Köenigsegg. 
+          <p> Köenigsegg, a brief history is a 4 page website that covers the company Köenigsegg. 
             this website provides information about Köenigsegg as a company like how it started, where it is based and how it runs. 
             It also will provide information about the records Köenigsegg has held.
             this website also covers the CCGT, the first and only Köenigsegg to be built for motorsport and the Köenigsegg jesko which is the fastest car on earth.
-          </h5>
+          </p>
 
           <h3> Early history of Köenigsegg </h3>
-          <h5> on August 12th, 1994 the current CEO and the founder of Köenigsegg created the company,
+          <p> on August 12th, 1994 the current CEO and the founder of Köenigsegg created the company,
             at the time the young Christian Von Köenigsegg had zero history of car design or manufacturing.<br>
             however he had a passion for performance cars, two years after founding Köenigsegg the first Köenigsegg ever drove.
             the Köenigsegg CC was driven by Rickard Rydell, Picko Troberg, and Calle Rosenblad at Anderstorp race track, 
@@ -49,7 +49,7 @@
             in 2003 the Köenigsegg workshop and factory in Margretetorp burnt caught fire, it used a thatch roof which Köenigsegg was unable
             to replace due to the buildings heritage status. Luckily no cars were damaged in the blaze however many early records of Köenigsegg 
             were lost to it.
-           </h5>
+           </p>
 
            <h3>List of Köenigsegg production cars</h3>
            <ul> 
@@ -96,3 +96,4 @@
   </body>
 
 </html>
+
