--- a/records.html
+++ b/records.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="box banner">
-        <h1>Koenigsegg</h1>
+        <h1>Koenigsegg, a brief history</h1>
         </div> <!--/banner-->
 
         <div class="box nav">
@@ -54,3 +54,4 @@
         </div>
   </body>
 </html>
+
