--- a/CCGT.html
+++ b/CCGT.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="box banner">
-        <h1>Koenigsegg</h1>
+        <h1>Koenigsegg, a brief history</h1>
         </div> <!--/banner-->
 
         <div class="box nav">
@@ -59,3 +59,4 @@
   </body>
 
 </html>
+
