--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="author" content="P.HARTON">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <title>L1 website test - Peter Harton</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body> 
     <div class="wrapper">
       <div class="box banner">
         <h1>Köenigsegg, a brief history</h1>
@@ -96,4 +99,5 @@
   </body>
 
 </html>
+
 
