--- a/CCGT.html
+++ b/CCGT.html
@@ -7,6 +7,9 @@
     <meta name="author" content="P.HARTON">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <title>L1 website test - Peter Harton</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -59,4 +62,5 @@
   </body>
 
 </html>
+
 
