--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="author" content="P.HARTON">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>L1 website test - Peter Harton</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-    <title>L1 website test - Peter Harton</title>
-    <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
-  <body> 
+  <body>
     <div class="wrapper">
       <div class="box banner">
         <h1>Köenigsegg, a brief history</h1>
@@ -33,14 +34,14 @@
           <h2> Welcome to Köenigsegg, a brief history! </h2>
 
           <h3> What is Köenigsegg, a brief history about? </h3>
-          <p> Köenigsegg, a brief history is a 4 page website that covers the company Köenigsegg. 
+          <h5> Köenigsegg, a brief history is a 4 page website that covers the company Köenigsegg. 
             this website provides information about Köenigsegg as a company like how it started, where it is based and how it runs. 
             It also will provide information about the records Köenigsegg has held.
             this website also covers the CCGT, the first and only Köenigsegg to be built for motorsport and the Köenigsegg jesko which is the fastest car on earth.
-          </p>
+          </h5>
 
           <h3> Early history of Köenigsegg </h3>
-          <p> on August 12th, 1994 the current CEO and the founder of Köenigsegg created the company,
+          <h5> on August 12th, 1994 the current CEO and the founder of Köenigsegg created the company,
             at the time the young Christian Von Köenigsegg had zero history of car design or manufacturing.<br>
             however he had a passion for performance cars, two years after founding Köenigsegg the first Köenigsegg ever drove.
             the Köenigsegg CC was driven by Rickard Rydell, Picko Troberg, and Calle Rosenblad at Anderstorp race track, 
@@ -52,27 +53,27 @@
             in 2003 the Köenigsegg workshop and factory in Margretetorp burnt caught fire, it used a thatch roof which Köenigsegg was unable
             to replace due to the buildings heritage status. Luckily no cars were damaged in the blaze however many early records of Köenigsegg 
             were lost to it.
-           </p>
+           </h5>
 
            <h3>List of Köenigsegg production cars</h3>
            <ul> 
-             <li> CC prototype, first ever car manufactured by Köenigsegg. </li>
-             <li> CC8S, second car produced by koenigsegg and first to be homologated for sale. </li>
-             <li> CCR, had an updated front end design compared to the CC8S aswell as better suspension, more power and a larger rear wing. </li>
-             <li> CCGT, only one ever made and only Köenigsegg to be homologated for a racing series, however the regulations changed prior to Köenigsegg being able to participate. </li>
-             <li> CCX, first Köenigsegg to be sold in the United States. </li>
-             <li> CCXR, CCX with more power and better handling. </li>
-             <li> Agera, first turbocharged Köenigsegg. </li>
-             <li> Agera r, enhanced performance over the Agera. </li>
-             <li> Agera s, was an agera optimised for performance fuels instead of regular 91. </li>
-             <li> Agera rs, lighter weight and higher power combined with better cornering made it a faster car in turns and in straight lines. </li>
-             <li> One:1, had a 1:1 power to weight ratio with 1360ps of power and 1360kg of weight </li>
-             <li> Regera, first Köenigsegg with a hybrid drivetrain and first to stray from original design. </li>
-             <li> Jesko attack, higher downforce allowing for better corner. </li>
-             <li> Jesko absolut, fastest Köenigsegg ever built, has a shark fin no other köenigsegg has. </li>
-             <li> Gemera, first ever 4 seater Köenigsegg. </li>
-             <li> CC850, return to the classic design philosophy with a manual transmission. </li>
-           </ul>
+            <li> CC prototype, first ever car manufactured by Köenigsegg. </li>
+            <li> CC8S, second car produced by koenigsegg and first to be homologated for sale. </li>
+            <li> CCR, had an updated front end design compared to the CC8S aswell as better suspension, more power and a larger rear wing. </li>
+            <li> CCGT, only one ever made and only Köenigsegg to be homologated for a racing series, however the regulations changed prior to Köenigsegg being able to participate. </li>
+            <li> CCX, first Köenigsegg to be sold in the United States. </li>
+            <li> CCXR, CCX with more power and better handling. </li>
+            <li> Agera, first turbocharged Köenigsegg. </li>
+            <li> Agera r, enhanced performance over the Agera. </li>
+            <li> Agera s, was an agera optimised for performance fuels instead of regular 91. </li>
+            <li> Agera rs, lighter weight and higher power combined with better cornering made it a faster car in turns and in straight lines. </li>
+            <li> One:1, had a 1:1 power to weight ratio with 1360ps of power and 1360kg of weight </li>
+            <li> Regera, first Köenigsegg with a hybrid drivetrain and first to stray from original design. </li>
+            <li> Jesko attack, higher downforce allowing for better corner. </li>
+            <li> Jesko absolut, fastest Köenigsegg ever built, has a shark fin no other köenigsegg has. </li>
+            <li> Gemera, first ever 4 seater Köenigsegg. </li>
+            <li> CC850, return to the classic design philosophy with a manual transmission. </li>
+          </ul>
 
            <h4> Extra information: </h4>
            <p> 
@@ -97,7 +98,4 @@
         </div> <!--/ footer -->
         </div>
   </body>
-
 </html>
-
-
