--- a/CCGT.html
+++ b/CCGT.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <div class="box banner">
-        <h1>Koenigsegg</h1>
+        <h1>Köenigsegg, a brief history</h1>
         </div> <!--/banner-->
 
         <div class="box nav">
@@ -62,3 +62,4 @@
         </div>
   </body>
 </html>
+
