--- a/records.html
+++ b/records.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <div class="box banner">
-        <h1>Koenigsegg, a brief history</h1>
+        <h1>Köenigsegg, a brief history</h1>
         </div> <!--/banner-->
 
         <div class="box nav">
@@ -57,5 +57,6 @@
         </div>
   </body>
 </html>
+
 
 
