--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li> Agera rs, lighter weight and higher power combined with better cornering made it a faster car in turns and in straight lines. </li>
             <li> One:1, had a 1:1 power to weight ratio with 1360ps of power and 1360kg of weight </li>
             <li> Regera, first Köenigsegg with a hybrid drivetrain and first to stray from original design. </li>
-            <li> Jesko attack, higher downforce allowing for better corner. </li>
+            <li> Jesko attack, higher downforce allowing for better cornering. </li>
             <li> Jesko absolut, fastest Köenigsegg ever built, has a shark fin no other köenigsegg has. </li>
             <li> Gemera, first ever 4 seater Köenigsegg. </li>
             <li> CC850, return to the classic design philosophy with a manual transmission. </li>
@@ -100,4 +100,5 @@
         </div>
   </body>
 </html>
+
 
